<resources>
    <string name="app_name">MeigRS32</string>

    <string name="main_title">Function Test</string>
    <string name="to_be_developed">To be developed</string>
    <string name="brightness_title">set brightness value = </string>

    <string name="nfc_layout_tag">Please let NFC tag get close to antenna</string>
    <string name="nfc_layout_tag1">NFC will enable automatically.</string>
    <string name="nfc_layout_tag2">Please let 4 NFC tags get close to antenna.</string>
    <string name="nfc_layout_tag3">The test will be automatically finish,or expired in 1 minutes.</string>
    <string name="g_sensor_layout_tag">Please rotate the LCD screen to pas all the test case:</string>
    <string name="g_sensor_up">Up:</string>
    <string name="g_sensor_down">Down:</string>
    <string name="g_sensor_left">Left:</string>
    <string name="g_sensor_right">Right:</string>
    <string name="led_flag">set status leds to</string>
    <string name="gyro_x_angle">The angle of rotation along the X axis is:</string>
    <string name="gyro_y_angle">The angle of rotation along the Y axis is:</string>
    <string name="gyro_z_angle">The angle of rotation along the Z axis is:</string>
    <string name="l_sensor_tag">Light sensor value = </string>
    <string name="l_sensor_tag1">Please fully cover light sensor,\n the test value should be smaller than 50</string>
    <string name="l_sensor_tag2">After that,do not cover the sensor , \n the test value should be larger than 50</string>
    <string name="l_sensor_tag3">The test will be automatically finish , \n or expired in 15 second.</string>
    <string name="vibrator_tag">Make sure the device lies flat on a table,\n Test will audo run in 2 seconds.</string>
    <string name="vibrator_tag1">Do not touch device while testing</string>
    <!-- camera test -->
    <string name="flashlight_text">Flashlight</string>
    <string name="switch_camera">Switch</string>
    <string name="preview">Preview</string>
    <string name="takephoto">TakePhoto</string>
    <string name="start_tag">Test will run in 2 seconds start</string>
    <string name="run_in_test_finish">Run-In Test has been completed</string>
    <string name="earphone_play">PLAY VIDEO</string>
    <string name="earphone_stop">STOP VIDEO</string>
    <string name="earphone_start_record">START RECORD</string>
    <string name="earphone_stop_record">STOP RECORD</string>
    <string name="earphone_tag">Please insert earphone</string>
    <string name="earphone_tag1">Please check if the earphone icon appears</string>
    <string name="earphone_pulled_out">EarPhone have been pulled out</string>
    <string name="earphone_inserted">EarPhone inserted</string>
    <string name="battery_charge_tag">Please do not keep charging</string>
    <string name="battery_charge_is">Battery charge is:</string>
    <string name="battery_second_voltage">Second battery voltage:</string>
    <string name="battery_charger_voltage">Charging voltage:</string>
    <string name="battery_charger_status">Charging status:</string>
    <string name="battery_charger_method">Charging method:</string>
    <string name="bluetooth_list">Bluetooth Lists</string>
    <string name="bluetooth_address">Bluetooth MAC Address: </string>
    <string name="bluetooth_no_device">No device was scanned</string>
    <string name="bluetooth_scan">Rescan</string>
    <string name="speaker_tag">Please check the audio played at Speaker</string>
    <string name="speaker_tag1">Please select the sound you hear</string>
    <string name="speaker_sure">Sure</string>
    <string name="record_start">start</string>
    <string name="record_tag">Recording is completed and will be automatically played after two seconds</string>
    <string name="record_completed">complete</string>
    <string name="gps_current_lng">Current longitude:</string>
    <string name="gps_current_lat">Current latitude:</string>
    <string name="gps_count_num">Number of satellites:</string>
    <string name="wifi_mac_address">Wifi MAC Address: </string>
    <string name="wifi_list">Wifi Lists</string>
    <string name="sim_insert_sim">Please insert sim card</string>
    <string name="sim_state_unknown">Unknown</string>
    <string name="sim_call_timer_call">Will automatically make calls after 5 seconds</string>
    <string name="sim_call_tag">Countdown:</string>
    <string name="sim_call_telphone">Phone number:</string>
    <string name="sd_state_flag">Please insert sd card</string>
    <string name="record_pull_earphone">Please unplug headphones</string>

    <!--prompt dialog -->
    <string name="prompt_dialog_title">Prompt</string>
    <string name="prompt_dialog_result">Please choose test result</string>
    <string name="prompt_dialog_untest">SET UNTEST</string>
    <string name="prompt_dialog_fail">FAILURE</string>
    <string name="prompt_dialog_pass">SUCCESS</string>

    <!--function -->
    <string name="function_pcba">PCBA(SMT Function Test)</string>
    <string name="function_run_in">Run-in</string>
    <string name="function_pre_function">Pre_Function Test</string>
    <string name="function_fat">FAT(Finished Assembly Test)</string>
    <string name="function_information_check">Information Check</string>
    <string name="function_wireless">Wireless Test</string>
    <string name="function_other">Other Test</string>

    <!--PCBA-->
    <string name="pcba_software_version">Software Version Test</string>
    <string name="pcba_charger">Charger Test</string>
    <string name="pcba_memory_ram">Memory RAM Test</string>
    <string name="pcba_memory_emmc">Memory EMMC Test</string>
    <string name="pcba_battery_charge">Battery charge Test</string>
    <string name="pcba_audio">Audio function Test</string>
    <string name="pcba_audio_earphone">EarPhone Test</string>
    <string name="pcba_audio_speaker">Speaker Test</string>
    <string name="pcba_audio_receive">Receiver/Mic Test</string>
    <string name="pcba_audio_record">Record Test</string>
    <string name="pcba_wifi">Wifi Test</string>
    <string name="pcba_bt">Bluetooth Test</string>
    <string name="pcba_gps">GPS Test</string>
    <string name="pcba_vibrator">Vibrator Test</string>
    <string name="pcba_power">Power Test</string>
    <string name="pcba_rear_camera">Rear Camera Auto Test</string>
    <string name="pcba_camera">Front Camera Test</string>
    <string name="pcba_lcd_brightness">LCD Brightness Test</string>
    <string name="pcba_led">LED Test</string>
    <string name="pcba_g_sensor">G-Sensor Test</string>
    <string name="pcba_e_compass">E-ComPass Test</string>
    <string name="pcba_l_sensor">L-Sensor Test</string>
    <string name="pcba_gyro_meter">Gyro-Meter Test</string>
    <string name="pcba_keyboard">Keyboard Tets</string>
    <string name="pcba_sim">SIM Test</string>
    <string name="pcba_sim_call">SIM Call Test</string>
    <string name="pcba_storage_card">Storage Card Test</string>
    <string name="pcba_usb_otg">USB OTG Test</string>
    <string name="pcba_nfc">NFC Test</string>
    <string name="pcba_nfc_se">NFC SE Test</string>

    <!--run-in-->
    <string name="run_in_cpu">CPU Test</string>
    <string name="run_in_memory_ram">Memory RAM Test</string>
    <string name="run_in_memory_emmc">Memory EMMC Test</string>
    <string name="run_in_battery">Battery Test</string>
    <string name="run_in_lcd_rgb">LCD R/G/B Test</string>
    <string name="run_in_lcd_brightness">LCD Brightness Test</string>
    <string name="run_in_audio">Audio Test</string>
    <string name="run_in_led">LED Test</string>
    <string name="run_in_nfc">NFC Test</string>
    <string name="run_in_rear_camera">Rear Camera Auto Test</string>
    <string name="run_in_g_sensor">G-Sensor Test</string>
    <string name="run_in_e_compass">E-ComPass Test</string>
    <string name="run_in_l_sensor">L-Sensor Test</string>
    <string name="run_in_gyro_meter">Gyro-Meter Test</string>
    <string name="run_in_vibrator">Vibrator Test</string>

</resources>
