<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pop_txt_bg"
    android:orientation="vertical"
    android:overScrollMode="never"
    tools:context=".activity.GpsActivity">

    <include
        layout="@layout/include_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start_tag"
        android:textColor="@color/black_dan"
        android:textSize="@dimen/fontSize" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/lng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/m_left"
            android:layout_marginTop="40dp"
            android:maxLines="1"
            android:text="@string/gps_current_lng"
            android:textColor="@color/black_dan"
            android:textSize="@dimen/fontSize" />

        <TextView
            android:id="@+id/lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/m_left"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:text="@string/gps_current_lat"
            android:textColor="@color/black_dan"
            android:textSize="@dimen/fontSize" />

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/m_left"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:text="@string/gps_count_num"
            android:textColor="@color/black_dan"
            android:textSize="@dimen/fontSize" />


    </LinearLayout>

</LinearLayout>