<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/m_left"
        android:background="@drawable/prompt_dialog_bg"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/m_left"
                android:background="@drawable/alert_dialog_icon" />

            <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/m_left"
                android:singleLine="true"
                android:text="@string/prompt_dialog_title"
                android:textColor="@color/black"
                android:textSize="@dimen/fontSize" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/pop_txt_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/m_left"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/prompt_dialog_result"
            android:textColor="@color/black_dan"
            android:textSize="@dimen/fontSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/unTest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/prompt_dialog_untest"
                android:textColor="@color/grey"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/fail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/prompt_dialog_fail"
                android:textColor="@color/red_800"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/pass"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/prompt_dialog_pass"
                android:textColor="@color/green_1"
                android:textSize="@dimen/fontSize"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>