<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pop_txt_bg"
    android:orientation="vertical"
    android:overScrollMode="never"
    tools:context=".activity.LSensorActivity">

    <include
        layout="@layout/include_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l_sensor_tag"
                android:textColor="@color/black_dan"
                android:textSize="@dimen/fontSize" />

            <TextView
                android:id="@+id/values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black_dan"
                android:textSize="@dimen/fontSize" />

        </LinearLayout>

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="130dp"
            android:gravity="center"
            android:maxLines="2"
            android:textColor="@color/black_dan"
            android:textSize="@dimen/fontSize"
            android:text="@string/l_sensor_tag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:maxLines="2"
            android:textColor="@color/black_dan"
            android:textSize="@dimen/fontSize"
            android:text="@string/l_sensor_tag2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:maxLines="2"
            android:textColor="@color/black_dan"
            android:textSize="@dimen/fontSize"
            android:text="@string/l_sensor_tag3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>

</LinearLayout>